Fix copyright overlapping on screens < 992px

--- a/custom.css
+++ b/custom.css
@@ -1885,7 +1885,7 @@ input#AcceptNewHardware:checked ~ button {
     }
 
     .container-fluid {
-        padding: 0 10px !important;
+        padding: 0 10px 20px 10px !important;
         margin: 0 !important;
     }
 }
